Added Forest Stage

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -258,3 +258,21 @@
 	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Spark_Mandrill}
 }
+
+@online{wiki:Forest,
+	author={{Forest Stage}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Forest_Stage}
+}
+
+@online{wiki:Sting_chameleon,
+	author={{Sting Chameleon}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Sting_Chameleon}
+}
+
+@online{wiki:RT55J,
+	author={{RT-55J}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/RT-55J}
+}
