--- a/src/x1.tex
+++ b/src/x1.tex
@@ -216,7 +216,7 @@ Following enemies are present in the stage\cite{wiki:Ocean}:
 \end{figure}
 This stage only has an heart tank has its collectible. In order to get it the player musts first destroy the Cruizer by reaching the ocean's surface via a whirlpool,climb on it and then shoot at its blue core, avoiding the Sky Claws which the ship will spawn. Once destroyed the Cruizer will sink and will destroy the ocean floor, revealing an hidden portion with a large room filled with spiked gaps on the ground. Here another Utuboros (technically the first since the other reside later in the level) must be defeated, in order to open the door which leads to an Heart Tank. After that X must exit from where he entered and climb the wall where the ship fall in order to return to the main path.
 
-\subsection{Launch Octopus}
+\subsection{Launch Octopus}\label{boss:Launch_octopus}
 Launch Octopus, the ``\textit{General of the Deep Sea}''\cite{book:MMX_Complete_art} was a Maverick Haunter of the 6th fleet armada before joining Sigma's rebellion and setting his base in the dept of the Ocean, in order to attack marine cities with his army of mechaniloids and to cut off shipping routes. In \x he joins Sigma due the fact he shares the dream of a world only for reploids, having always had doubt on protecting humans, while in \mhx he is pictured military tactician which want to achieve beauty in combat, considering himself an unappreciated artist of underwater fighting. Only Sigma understand his art, making Launch Octopus side with him\cite{wiki:MM_MHX_script}.
 
 \begin{figure}[h]
@@ -699,6 +699,13 @@ The boss fight takes a turn when fought with Boomer Kuwanger main weakness: the 
 
 According to his specifications Boomer Kuwanger is 242 cm tall and 94 Kg heavy (again, different from in-game information which makes him shorter and lighter). More interesting however is the fact Boomer Kuwanger is one of few reploids known to have family relationship with another reploid (in this specific case a brother): Gravity Beetle.%\ref{Gravity_beetle}.
 
+After defeating him X will gain the Boomerang Cutter weapon(\ref{Boomerang_cutter}) for his own use.
+\begin{figure}[htp]
+	\centering
+	\includegraphics[width=0.5\linewidth]{figures/X1/Boomer_kuwanger_specs.png}
+	\caption{Boomer Kuwanger in-game specs.}
+\end{figure}
+
 \section{Power Plant}
 The \textit{Power Plant} (or \textit{Electromagnetic Power Plant} in the remake) stage is where Spark Mandrill resides. As to be expected from its name, this stage's main feature revolve around electricity in various form. However if the player manages to defeat Storm Eagle first the Death Rogumer will crash land onto this stage, cutting the power and removing part of the stage's hazards. 
 The first section of the stage consists in a maze of pipes split into different levels connected by ladders. Here, along with some enemies, electric sparks will spawn and travel along the ground, dealing damage on contact. Passed this part a dangerous one awaits: here the light will shut down at regular interval making difficult to spot the level layout, especially pits. Furthermore along the stage  \hyperlink{enem:Hotarion}{Hotarions} will spawn traveling horizontally while also illuminating the stage along their path. They can be rather dangerous as the move fast and, if the player doesn't know where they spawn, can hit X while jumping and make him fall into a pit.
@@ -736,9 +743,45 @@ Spark Mandrill was originally a Maverick Haunter of the 17th Elite unit directly
 
 Better known as the ``\textit{Quick-Fisted King of Lightning}'' Mandrill keeps faith to his title by fights against X mostly using melee attacks, but he can also use ranged attack in the form of his own Electric Spark whether the situation requires.
 
-Although his size, Mandrill can move quite fast, especially when using his punch attack which comes into two possible ways\cite{wiki:Spark_mandrill}: if X is near Mandrill he will straight hit him with a quick attack which can be hard to dodge due the close distance; meanwhile if the player is far from him, Mandrill while dash toward him while punching. This latter attack is easier to avoid since Mandrill's dash speed is relatively low, hence avoidable.  As said before Spark Mandrill can also attack from the distance using his Electric Spark. With this move Mandrill will punch the ground producing two orbs made of electricity which will travel in split directions along the ground and also along walls. These orbs move relatively fast but can be avoided with a jump at the right timing. Finally Mandrill will sometimes jump and hang to the ceiling and move toward X. When he passes below him, Mandrill will drop down trying to hit him.
+Although his size, Mandrill can move quite fast, especially when using his punch attack which comes into two possible ways\cite{wiki:Spark_mandrill}: if X is near Mandrill he will straight hit him with a quick attack which can be hard to dodge due the close distance; meanwhile if the player is far from him, Mandrill while dash toward him while punching. This latter attack is easier to avoid since Mandrill's dash speed is relatively low, hence avoidable.  As said before Spark Mandrill can also attack from the distance using his Electric Spark. With this move Mandrill will punch the ground producing two orbs made of electricity which will travel in split directions along the ground and also along walls. These orbs move relatively fast but can be avoided with a jump at the right timing. Finally Mandrill will sometimes jump and hang to the ceiling and move toward X. When he passes below him, Mandrill will drop down trying to hit him. 
 
-According to his specifications Spark Mandrill is 305cm tall and weights 394 Kg (slightly heavier than in-game information).
+According to his specifications Spark Mandrill is 305cm tall and weights 394 Kg (slightly heavier than in-game information). Upon defeated X will gain the Electric Spark(\ref{Electric_spark}) weapon.
 \section{Forest}
+Last but not least of \x's main stages is the Forest (or Recon Base Ruins). This is a rather plain and straightforward level with no particular gimmicks involved or secret paths. Finally this is also one of the few stages which change depending if another boss has been defeated before: in this particular case if Launch Octopus is gone the Forest will be flooded. However this doesn't have an impact on the difficulty level, in opposite of other stages with this feature.
+
+The beginning of the level sees X teleporting in the middle of the forest. From here he must proceed to the right fighting enemies, some of them also disguised as bushes, until he reaches the entrance of a tunnel. From here there are three possible paths: if X climbs the wall above the tunnel he will reach and area with the optional miniboss \hyperlink{miniboss:RT-55J}{RT-55J} and the Armor Parts; if he slide down the pit he will reach a hidden cave with the Heart Tank; finally if he proceed straight he will go on in the stage. While in the tunnel an earthquake will cause rocks to fall from the roof, damaging X if they hit him. Moreover enemies will also fall from the roof: they're \hyperlink{enem:Crag_man}{Crag Men} which disguise themselves as rocks and fall onto X as he passes beneath, only to transform after hitting the floor. This section is far less dangerous if X has either defeated RT-55J (which was the earthquake's cause) or obtained the helmet parts (which makes X invulnerable to falling rocks). In both cases Crag Men will always be present.
+
+The last portion of the Stage is a Ride Armor section. Right at the beginning X is given a Ride Armor to proceed in the stage, which now present large ponds of mud which makes X and the Armor slowly sink, interrupted by small platform where the player can stand on. While X can free himself by repeatedly jumping, one the Ride Armor sinks it is gone. This can be problematic since near the end enemies Ride Armors will start attacking and can be tough to take down without using one too. At the end of this stage's portion the player will find the boss door.
+
+Following enemies appear in this stage\cite{wiki:Forest}:
+\begin{itemize}
+	\item \hyperlink {miniboss:RT-55J}{RT-55J}
+	\item \hyperlink {enem:Amenhopper} {Amenhopper}
+	\item \hyperlink {enem:Armor_Soldier} {Armor Soldier(with Ride Armor)}
+	\item \hyperlink {enem:Axe_Max} {Axe Max}
+	\item \hyperlink {enem:Crag_Man} {Crag Man}
+	\item \hyperlink {enem:Creeper} {Creeper}
+	\item \hyperlink {enem:Hoganmer} {Hoganmer}
+	\item \hyperlink {enem:Jamminger} {Jamminger}
+	\item \hyperlink {enem:Mad_Pecker} {Mad Pecker}
+	\item \hyperlink {enem:Planty_Iworms} {Planty\&Iworms}
+\end{itemize}
+
+\subsection{Armor Parts}
+The armor parts is found near the beginning of the stage, before entering the tunnel. If X climbs the wall above said tunnel (reachingit by a dash-hump from above the pit) and proceed right he will reach an arena which will immediately close the exit with some falling rocks, and the RT-55J miniboss will spawn. His main attacks consists using his claw to grub X (or pull itself towards the wall if the claw hits it) or, if X is out of the claw's range, jump onto him. Its weak point are the head and his hole body, which however is covered most of the times by its claw, which is instead immune to all attack. This means that beside specific occasions (such when it throws the claw), the main spot to hid is the head. Due the lack of invincibility frames, the Storm Tornado is the best choice, although the Boomerang Cutter is considered its main weakness\cite{wiki:RT55J}. As the fight proceed RT-55J will start smoking, hinting the fact that his health bar is low. Once the miniboss has been defeated the Light Capsule with the enhancement will rise from the ground.
+
+\subsection{Heart Tank}
+The Heart Tank position is mirrored respect the Armor Parts. To reach it X has in fact to slide down the pit near the beginning of the stage to find a wall breakable by the Foot Parts which leads to a small cavern. Once inside the Heart Tank will be on a small platform in the top-right corner of the room, above a bottomless pit. X cannot reach it normally with dash jump due the distance, but he can if  the cave is flooded as consequence of defeating Launch Octopus\ref{boss:Launch_octopus}, thanks to the extra height X gains when jumping underwater. Doing a wall dash-jump from the cave entrance is not recommended, since X will hit the roof and fall.
+
+\subsection{Sting Chameleon}\label{boss:Sting_chameleon}
+Sting Chameleon once belonged to the Maverick Haunter Ranger Unit (namely 9th Special Force\cite{wayback:X_resources}) He was a very high-Haunter which however was never worth a promotion due his sly ,sneaky and sharp-tongue nature, which made him unpopular\cite{Xcoll1:Manual_X1} among his commander or other members of his unit. Furthermore Chameleon's preference for strategy and his strong belief in the ``\textit{By any mean necessary}'' mantra  worth him the title of coward\cite{MHX:manual}. Once Sigma started his riot, Chameleon saw an opening to rise through ranks and prove what he capable of. Sigma then proceed to put him in charge of defending the front-line base in the forest.
+
+Sting Chameleon uses three main weapons when fighting\cite{wiki:Sting_chameleon}: his natural ability to blend with the surrounding, which makes him almost invisible to enemies, his long tongue, which he use to deliver high-speed attacks or even to hang himself around, and his main projectile, the Chameleon Sting, which he shots from his tail. These weapons all translate in attack he can perform while battling X at the end of the Forest Stage. His main method of movement is his Transparent Movement, which makes him transparent and invincible. After a short amount of time Chameleon will reappear, usually hanged on the background, ready to attack X. The player can however spot his position as the distortion he causes when moving, and intercept him before he launches his attack. If Chameleon reappears near X this means he will use his Iron Tongue attack, which strikes the player by rapidly extending his tongue, even up to three times in a row. Otherwise if he reappears in a top corner, then he will use his Chameleon Sting attack, shooting a sheet of projectile by swinging his tail. Finally Chameleon can also hang to the roof by using his tongue and start shaking, causing spikes to fall from the roof (Thorn Rain) which will damage X, even with the Helmet Parts equipped.
+
+While fighting Sting Chameleon without the correct weapon is not trivial, everything changes when using the Boomerang Cutter, his weakness. Although at first it seems this weapons only does increased damage to him, since it does not sever him like Flame Mammoth or Launch Octopus, at a more accurate analysis is possible to see this weapon force his AI into a loop which can be exploited to end the fight quickly. Once hit Chameleon will, in fact, always move to the opposite side of the room and use his Thorn Rain attack. This means that the only thing the player has to do is stay in the center of the room, shooting some Boomerang Cutters where Chameleon will reappears and, as soon as he gets hit, turn and do the same thing in the opposite direction. The player hasn't even to take care of weapon energy, as all boomerangs which don't hit the boss will return replenishing the weapon energy. 
+
+According to data Sting Chameleon was 177 cm tall and 77 Kg heavy, while his title was ``\textit{Frightening Forest's Strike}''
+After defeating Sting Chameleon X will add the Chameleon Sting(\ref{Chameleon_sting}) weapon to his arsenal.
+
 \section{Sigma Stage (1-4)}
 \section{Miscellaneous}\label{X1:misc} %wall clip glithc, seven pixel, auto edge grub flying hadoken %subt-tank + life farming
