--- a/src/enemies.tex
+++ b/src/enemies.tex
@@ -4,6 +4,7 @@
 		\item \hypertarget{miniboss:Anglerge}{Anglerge}
 		\item \hypertarget{miniboss:Bee_Blader}{Bee Blader}
 		\item \hypertarget{miniboss:Mole_Borer}{Mole Borer}
+		\item \hypertarget{miniboss:RT-55J}{RT-55J}
 		\item \hypertarget{miniboss:Thunder_Slimer}{Thunder Slimer}
 		\item \hypertarget{miniboss:Utuboros}{Utuboros}
 	\end{itemize}
@@ -17,6 +18,8 @@
 	\item \hypertarget{enem:Batton_Bone}{Batton Bone}
 	\item \hypertarget{enem:Batton_M-501}{Batton M-501} 
 	\item \hypertarget{enem:Bomb_Been}{Bomb Been}
+	\item \hypertarget{enem:Crag_Man} {Crag Man}
+	\item \hypertarget{enem:Creeper} {Creeper}
 	\item \hypertarget{enem:Crusher}{Crusher}
 	\item \hypertarget{enem:Cruiziler}{Cruiziler}
 	\item \hypertarget{enem:Dig_Labour}{Dig Labour}
@@ -30,9 +33,11 @@
 	\item \hypertarget{enem:Jamminger}{Jamminger}
 	\item \hypertarget{enem:Ladder_Yadder}{Ladder Yadder}
 	\item \hypertarget{enem:Lift Cannon}{Lift Cannon}
+	\item \hypertarget{enem:Mad_Pecker} {Mad Pecker}
 	\item \hypertarget{enem:Mega_Tortoise}{Mega Tortoise}
 	\item \hypertarget{enem:Metal_Wing}{Metal Wing}
 	\item \hypertarget{enem:Metall_C-15}{Metall C-15} 
+	\item \hypertarget{enem:Planty_Iworms} {Planty\&Iworms}
 	\item \hypertarget{enem:Ray_Bit}{Ray Bit}
 	\item \hypertarget{enem:Road_Attackers}{Road Attackers}
 	\item \hypertarget{enem:Rolling_Gabyoall}{Rolling Gabyoall}
@@ -46,6 +51,14 @@
 	\item \hypertarget{enem:Spiky}{Spiky}
 	\item \hypertarget{enem:Tombot}{Tombot}
 	\item \hypertarget{enem:Turn_Cannon}{Turn Cannon}
+	
+
+
+
+
+
+
+
 
 \end{itemize}
 
